# CentraleSupElec-NLP-Public-Resources

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.utils/: pre-push.sh  reboot_venv.sh  requirements.freeze  requirements.txt
sessions/: exam.md
sessions/01-Day/011-Morning/: 011-01-Presentation.pptx  011-02-Python_basics_exercice.ipynb  011-02-Python_basics_solution.ipynb  011-03-ML_basics_solution_exercice.ipynb
sessions/01-Day/012-Afternoon/: 011-02-Presentation.pptx  012-01-Presentation.pptx  012-02-ML_basics_exercice.ipynb  012-02-ML_basics_solution.ipynb  012-02-ML_basics_solution__GOOD.ipynb  012-03-NLP-Text-Processing-exercice.ipynb  012-03-NLP-Text-Processing-solution.ipynb
sessions/02-Day/0201-Morning/: 0201-02-NLP-Embedding-exercice.ipynb  0201-02-NLP-Embedding-solution.ipynb
sessions/02-Day/021-Morning/: 021-02-NLP-Embedding-exercice.ipynb  021-02-NLP-Embedding-solution.ipynb  021-02-NLP-Embedding-solution__GOOD.ipynb
sessions/02-Day/022-Afternoon/: README.md  main.py  requirements.txt  training-script.py
sessions/02-Day/022-Afternoon/tests/: test_api.py
sessions/03-Day/032-Afternoon/: 032-02-Pretrained-models-exercice.ipynb  032-02-Pretrained-models-solution.ipynb  032-03-Fine-tuning-exercice.ipynb  032-03-Fine-tuning-solution.ipynb
sessions/04-Day/042-Afternoon/: 042-02-GPT-advanced techniques-solution.ipynb
sessions/05-Day/051-Morning/: repos.csv
